<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@drawable/bg_gradient_blue">

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="260dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:background="@drawable/rounded_corners"-->
<!--        android:clipToOutline="true"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@drawable/login"/>-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        app:lottie_rawRes="@raw/icon_lottie_register"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_bg"
        android:padding="14dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_email"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/black"
            android:background="@null"
            android:paddingStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_bg"
        android:padding="14dp"
        android:layout_marginBottom="32dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_password"/>

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/black"
            android:background="@null"
            android:paddingStart="12dp"/>
    </LinearLayout>

<!--    <CheckBox-->
<!--        android:id="@+id/cb_remember_me"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Запомнить меня"-->
<!--        android:textColor="@color/white"/>-->

    <Button
        android:id="@+id/btn_login"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_button"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_prompt"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/go_to_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:text="@string/signup_link"
            android:fontFamily="@font/aclonica"
            android:layout_marginStart="7dp"/>
    </LinearLayout>
</LinearLayout>